# docstring-inheritance

./: .coveragerc  .gitignore  .mypy.ini  .pre-commit-config.yaml  .pytest.ini  .ruff.toml  CHANGELOG.md  CHANGELOG.rst  CREDITS.md  CREDITS.rst  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
LICENSES/headers/: CC-BY-4.0.txt  CC-BY-SA-4.0.txt
requirements/: test.txt
src/docstring_inheritance/: __init__.py  class_docstrings_inheritor.py  class_processor.py  griffe.py  metaclass.py
src/docstring_inheritance/_internal/: __init__.py  class_docstrings_inheritor.py
src/docstring_inheritance/_internal/docstring_inheritors/: google.py  numpy.py
src/docstring_inheritance/_internal/docstring_inheritors/bases/: __init__.py  inheritor.py  parser.py  renderer.py
src/docstring_inheritance/docstring_inheritors/: base.py  google.py  numpy.py
src/docstring_inheritance/docstring_inheritors/bases/: __init__.py  inheritor.py  parser.py  renderer.py
src/docstring_inheritance/docstring_processors/: base.py  google.py  numpy.py
src/docstring_inheritance/processors/: __init__.py  base.py  google.py  numpy.py
tests/: __init__.py  test_base_inheritor.py  test_base_parser.py  test_base_processor.py  test_google_inheritor.py  test_google_processor.py  test_inheritance_for_functions.py  test_metaclass_google.py  test_metaclass_numpy.py  test_numpy_inheritor.py  test_numpy_processor.py
