[project]
name = "docstring-inheritance"
description = "Avoid writing and maintaining duplicated docstrings."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.txt"]
authors = [{ name = "Antoine Dechaume" }]
classifiers = [
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = ["version"]
requires-python = ">=3.10,<4"
# This is only required for python 3.10.
dependencies = ["typing-extensions >=4,<5"]
optional-dependencies = { griffe = ["griffe>1"] }

[dependency-groups]
dev = ["covdefaults", "pytest", "pytest-cov"]

[project.urls]
Documentation = "https://antoined.github.io/docstring-inheritance"
Homepage = "https://github.com/AntoineD/docstring-inheritance"
Source = "https://github.com/AntoineD/docstring-inheritance"
Tracker = "https://github.com/AntoineD/docstring-inheritance/issues"

[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
