[metadata]
name = docstring-inheritance
author = Antoine Dechaume
url = https://github.com/AntoineD/docstring-inheritance
project_urls =
    Documentation = https://antoined.github.io/docstring-inheritance
    Source = https://github.com/AntoineD/docstring-inheritance
    Tracker = https://github.com/AntoineD/docstring-inheritance/issues
description = Avoid writing and maintaining duplicated docstrings.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files =
    LICENSE.txt
    CREDITS.md
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.6, <3.11

[options.packages.find]
where = src

[options.extras_require]
# Dependencies for testing.
test =
    pytest
    pytest-cov

# Tools settings

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source = docstring_inheritance

[coverage:report]
exclude_lines =
    pragma: no cover

[flake8]
# See http://www.pydocstyle.org/en/latest/error_codes.html for more details.
# https://github.com/PyCQA/flake8-bugbear#how-to-enable-opinionated-warnings
ignore =
    E501
    # no docstring for standard and private methods
    D105
    E203
    W503
# select = B,C,D,E,F,G,N,T,W
select = B,C,E,F,G,N,T,W
# settings for compatibility with black, see
# https://github.com/psf/black/blob/master/docs/compatible_configs.md#flake8
# https://black.readthedocs.io/en/stable/the_black_code_style.html?highlight=bugbear#line-length
max-line-length = 88
docstring-convention = google
