[metadata]
name = docstring-inheritance
author = Antoine Dechaume
url = https://github.com/AntoineD/docstring-inheritance
project_urls =
    Documentation = https://antoined.github.io/docstring-inheritance
    Source = https://github.com/AntoineD/docstring-inheritance
    Tracker = https://github.com/AntoineD/docstring-inheritance/issues
description = Avoid writing and maintaining duplicated docstrings.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files =
    LICENSE.txt
    CREDITS.md
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.7, <3.12

[options.packages.find]
where = src

[options.extras_require]
# Dependencies for testing.
test =
    covdefaults
    pytest
    pytest-cov

# Tools settings

[tool:pytest]
testpaths = tests

[coverage:run]
plugins = covdefaults
source = docstring_inheritance

[flake8]
ignore =
    # No docstring for standard and private methods.
    D105
    W503
# select = B,C,D,E,F,G,N,T,W
select = B,B950,C,E,F,G,N,T,W
# Settings for compatibility with black, see black docs
max-line-length = 88
docstring-convention = google
extend-ignore = E203, E501
